[gd_scene load_steps=4 format=3 uid="uid://ba3fd3816f1fd"]

[ext_resource type="Theme" uid="uid://cesgvqexxaqev" path="res://assets/themes/windows_95_theme.tres" id="1"]
[ext_resource type="Script" uid="uid://7511226d6221" path="res://components/apps/tarot/tarot_app.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://b8cd5rom7n7tl" path="res://assets/sigma.png" id="3"]

[node name="TarotApp" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1")
script = ExtResource("2")
window_title = "Tarot"
window_icon = ExtResource("3")
default_window_size = Vector2(600, 600)

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 8

[node name="TabButtons" type="HBoxContainer" parent="VBox"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="DrawTabButton" type="Button" parent="VBox/TabButtons"]
unique_name_in_owner = true
text = "Draw"

[node name="CollectionTabButton" type="Button" parent="VBox/TabButtons"]
unique_name_in_owner = true
text = "Collection"

[node name="DrawView" type="VBoxContainer" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 8

[node name="DrawButton" type="Button" parent="VBox/DrawView"]
unique_name_in_owner = true
text = "Daily Draw"

[node name="CooldownLabel" type="Label" parent="VBox/DrawView"]
unique_name_in_owner = true
text = ""

[node name="DrawResult" type="HBoxContainer" parent="VBox/DrawView"]
unique_name_in_owner = true
layout_mode = 2

[node name="CollectionView" type="ScrollContainer" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
visible = false

[node name="CollectionGrid" type="GridContainer" parent="VBox/CollectionView"]
unique_name_in_owner = true
columns = 6
